# robots

./: .gitignore  Makefile  README.md
0-gerenciamento/: readme.md
cpu_central/: Makefile  readme.md
cpu_central/src/face_recognition/scripts/: face_detection_node.py  face_embedding_node.py  face_recognition.py
cpu_central/src/object_recognition/: CMakeLists.txt
cpu_central/src/object_recognition/launch/: all.py
cpu_central/src/object_recognition/scripts/: webcam_publisher.py  yolo_node.py  yolo_subscriber.py
cpu_central/src/simple_follower/: CMakeLists.txt  package.xml
cpu_central/src/simple_follower/scripts/: simple_follower.py
cpu_rasp/: Makefile
cpu_rasp/src/libcomm2pioneerp3dx/: CMakeLists.txt
cpu_rasp/src/libcomm2pioneerp3dx/include/: pioneer_p3dx.h
cpu_rasp/src/libcomm2pioneerp3dx/src/: pack.c  pioneer_p3dx.c  pioneer_p3dx_pvt.h  tty.c
cpu_rasp/src/libpioneerp3dx/examples/: simple.c  teleop.c
cpu_rasp/src/libpioneerp3dx/include/: pioneer_p3dx.h
cpu_rasp/src/libpioneerp3dx/src/: pioneer_p3dx.c  pioneer_p3dx_pvt.h  tty.c
cpu_rasp/src/ros2aria/rosaria/src/: RosAria.cpp
docs/: Makefile  architecture.py
mechanics/: rpi3.stl
raspberry/: CMakeLists.txt
robot_pioneer/: topicos.cmake
robot_pioneer/cpu_central/src/object_recognition/: CMakeLists.txt  package.xml
robot_pioneer/cpu_jetson/: CMakeLists.txt
robot_pioneer/cpu_raspberry/: CMakeLists.txt
robot_pioneer/docs/0-gerenciamento/: readme.md
robot_pioneer/mechanics/: 2020_profile.scad  astra.scad  base_pioneer_p3dx.scad  din_rail.scad  din_rail_clip.scad  nvidia-jetson-nano-vri.FCStd  robot.scad
robot_turtlebot/: CMakeLists.txt
src/app_camera_kinect/: readme.md
src/app_camera_opencv/src/: main.cpp
src/app_camera_opencv_pub/src/: main.cpp
src/app_camera_orbbec_pub/: CMakeLists.txt
src/app_camera_orbbec_pub/src/: main.cpp
src/app_camera_sub/src/: main.cpp
src/app_data/src/: main.cpp
src/app_mediapipe/: app_mediapipe.py
src/app_pioneer/: CMakeLists.txt
src/app_pioneer/src/: main.c
src/app_pose_yolo/: pose_yolo.py
src/app_rplidar/src/: main.cpp
src/app_slam_lama/src/: graph_slam2d.cpp
src/lib_pioneer/: CMakeLists.txt
webots_cpu_rasp/: Makefile  readme.md
webots_cpu_rasp/src/my_package/: package.xml  setup.py
webots_cpu_rasp/src/my_package/launch/: robot_launch.py
webots_cpu_rasp/src/my_package/my_package/: my_robot_driver.py
webots_cpu_rasp/src/my_package/worlds/: my_world.wbt  world_pioneer.wbt
(+3 files in other folders)
